# rk4_solver

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  action.yaml
.github/workflows/: main.yml
benchmarks/: benchmark.cpp  cum_loop-benchmark.cpp  loop-benchmark.cpp  rk4_solver-benchmark.cpp  step-benchmark.cpp
examples/: cum_loop-example.cpp  event-example.cpp  event.cpp  example_event.cpp  example_loop.cpp  example_step.cpp  first_order-example.cpp  first_order.cpp  loop-example.cpp  loop.cpp  step-example.cpp  step.cpp
include/: matrix.hpp  matrix_io.hpp  rk4_solver.hpp  types.hpp
include/rk4_solver/: cum_loop.hpp  event.hpp  integrator.hpp  loop.hpp  step.hpp  types.hpp
matlab/: step_rk4.m
matlab/test/: rk4__first_order__test.m  run_test.m  run_tests.m  step_rk4__exact_integral__test.m  step_rk4__oscillator__test.m  test__step_rk4__exact_integral.m  test__step_rk4__first_order.m  test__step_rk4__first_order__test.m  test__step_rk4__oscillator.m
scripts/: benchmark.sh  clean_build.sh  clear_build.sh  update_test_data.sh
src/: rk4_solver-benchmark.cpp
test/: ball-test.cpp  first_order-test.cpp  motor-test.cpp  rk4_solver-ball-test.cpp  rk4_solver-ball.cpp  rk4_solver-first_order-test.cpp  rk4_solver-first_order.cpp  rk4_solver-motor-test.cpp  rk4_solver-motor.cpp  rk4_solver-sine-test.cpp  rk4_solver-sine.cpp  sine-test.cpp  test-rk4_solver-ball.cpp  test-rk4_solver-first_order.cpp  test-rk4_solver-motor.cpp  test-rk4_solver-sine.cpp  test_config.hpp
test/matlab/: ball__test.m  io_config.m  motor__test.m  rk4_solver__ball__test.m  rk4_solver__motor__test.m  rk4_solver__sine__test.m  run_all_tests.m  run_test.m  run_tests.m  test__rk4_solver__ball.m  test__rk4_solver__motor.m  test__rk4_solver__sine.m
